--- a/eCommerce.Net/MyOnlineShop/Views/Product/Index.cshtml
+++ b/eCommerce.Net/MyOnlineShop/Views/Product/Index.cshtml
@@ -1,15 +1,63 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model MyOnlineShop.DataAccess.ViewModels.ProductViewModel
 
-<!DOCTYPE html>
+@*<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Product ID</th>
+            <th>Product Name</th>
+            <th>Product Description</th>
+            <th>Amount</th>
+            <th>Category</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model.Products)
+        {
+            @Html.Partial("_ProductSummary", product)
+        }
+    </tbody>
+</table>*@
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-</body>
-</html>
+<div>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#mdlCreateProduct">Add Product</button>
+</div>
+
+<form method="post" action="Product/CreateProduct">
+    @*modal*@
+    <div class="modal fade" id="mdlCreateProduct" role="dialog">
+        <div class="modal-dialog">
+            @*Modal content*@
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add Product</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label asp-for=@Model.Product.ProductID></label>
+                        <input class="form-control" asp-for=@Model.Product.ProductID />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=@Model.Product.ProductName></label>
+                        <input class="form-control" asp-for=@Model.Product.ProductName />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=@Model.Product.ProductDescription></label>
+                        <input class="form-control" asp-for=@Model.Product.ProductDescription />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=@Model.Product.Amount></label>
+                        <input class="form-control" asp-for=@Model.Product.Amount />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=@Model.Product.Category></label>
+                        <input class="form-control" asp-for=@Model.Product.Category />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input class="btn btn-default" type="submit" name="Save" value="Save" />
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
