--- a/eCommerce.Net/MyOnlineShop/Views/Shared/_Layout.cshtml
+++ b/eCommerce.Net/MyOnlineShop/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
             <ul class="nav navbar-nav">
                 <li><a asp-controller="Customer" asp-action="Index">Customers</a></li>
                 <li><a asp-controller="Employee" asp-action="Index">Employees</a></li>
+                <li><a asp-controller="Product" asp-action="Index">Products</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         User Management
