Update Product Controllers and Views

--- a/eCommerce.Net/MyOnlineShop/Views/Product/Index.cshtml
+++ b/eCommerce.Net/MyOnlineShop/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyOnlineShop.DataAccess.ViewModels.ProductViewModel
 
-@*<table class="table table-bordered">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>Product ID</th>
@@ -16,7 +16,7 @@
             @Html.Partial("_ProductSummary", product)
         }
     </tbody>
-</table>*@
+</table>
 
 <div>
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#mdlCreateProduct">Add Product</button>
